--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,3 +97,19 @@ body {
     align-items: center;
   }
 }
+
+footer {
+  background-color: #ff6347;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+footer a {
+  color: #fffacd;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
