--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Link to the stylesheet -->
   <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   {{ content }}
