--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  font-family: 'Comic Neue', 'Comic Sans MS', 'Comic Sans', sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f0f8ff;
