--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 /* General Styles */
+/* General Styles */
 body {
   font-family: 'Comic Neue', 'Comic Sans MS', 'Comic Sans', sans-serif;
   margin: 0;
