--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
 <body>
-  {{ content }}
+  <div class="content-container">
+    {{ content }}
+  </div>
 
   <!-- MathJax Script -->
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
